--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index.js",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "seed": "node seedDatabase.js"
   },
   "author": "KuroxDev",
   "license": "ISC",
